--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "date-fns": "^3.2.0",
     "easy-peasy": "^6.0.4",
     "js-cookie": "^3.0.5",
     "json-server": "^1.0.0-alpha.21",
